fixed cards align error

--- a/src/components/order/Section.css
+++ b/src/components/order/Section.css
@@ -1,13 +1,16 @@
 .order-cards{
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
+  margin: auto;
   flex-wrap: wrap;
+
+  /* margin-left: 50px; */
 }
 .order-section-title{
   display: flex;
   flex-direction: column;
   /* width: 1100px; */
-  margin-left: 65px;
+  margin-left: 18px;
   color: #451400;
 }
 .order-section-title>h1{
@@ -21,7 +24,7 @@
 }
 
 .order-section{
-  width: 1100px;
+  width: 1000px;
   margin-top: 20px;
   margin-bottom: 35px;
   display: flex;
